# AEGIS-ENV

./: AEGIS_SUMMARY.md  BLOG.md  Dockerfile  Explanation.md  MODEL_CARD.md  README.md  colab_fixed.ipynb  demo_dashboard.py  memory.py  openenv.yaml  train.py  world_model.py
aegis_training/aegis_env/: Dockerfile  README.md  __init__.py  client.py  curriculum.py  environment.py  memory.py  models.py  openenv.yaml  pyproject.toml  reward.py  server.py
aegis_training/aegis_env/data/: customers.json
aegis_training/aegis_env/data/scenarios/level_1/: S-010d0a.json  S-013e1b.json  S-018cd4.json  S-01c633.json  S-0246f2.json  S-02a5e2.json  S-03a9d6.json  S-03b5cc.json  S-03c5f6.json  S-03e3cd.json  S-03f238.json  S-047e85.json  S-048ba1.json  S-049207.json  S-04a6e3.json  S-051302.json  S-053774.json  S-0544d6.json  S-0560c3.json  S-05c80f.json  S-05d9fd.json  S-05e113.json  S-063d14.json  S-07248c.json  S-0760b9.json  S-07a303.json  S-07b464.json  S-07eb8e.json  S-07f4a4.json  S-084617.json  S-087cb8.json  S-08ba0c.json  S-090d0e.json  S-0944d5.json  S-097d50.json  S-0a0ace.json  S-0a0eb0.json  S-0a79f3.json  S-0aa691.json  S-0ae34b.json  (+1040 more)
aegis_training/aegis_env/data/scenarios/level_2/: S-005d1e.json  S-00c62e.json  S-00d6a4.json  S-00f327.json  S-0129e5.json  S-016177.json  S-01cc47.json  S-01e070.json  S-028eb5.json  S-029b2c.json  S-02c2ae.json  S-040405.json  S-043dbb.json  S-044d14.json  S-045888.json  S-0469ee.json  (+1064 more)
aegis_training/aegis_env/generator/: build_dataset.py  models.py
aegis_training/aegis_env/server/: Dockerfile  __init__.py  app.py  client.py
(+39 files in other folders)
